fix: yml 에 필요없는부분 제거 #1